--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="image-container">
       <img id="image" src="" alt="Rotating Images" />
     </div>
-    <script src="script.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
