--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Gallery</title>
-</head>
-<body>
-    <img id="image" src="" alt="Image from Google Drive" style="max-width: 100%; height: auto;">
-    <script src="test.js"></script>
-</body>
+  </head>
+  <body>
+    <img id="image" src="" alt="Image from Google Drive" style="max-width: 100%; height: auto" />
+    <script src="script.js"></script>
+  </body>
 </html>
