--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Gallery</title>
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Link to the CSS file -->
   </head>
   <body>
-    <img id="image" src="" alt="Image from Google Drive" style="max-width: 100%; height: auto" />
+    <img id="image" src="" alt="images" style="max-width: 100%; height: auto" />
     <script src="script.js"></script>
   </body>
 </html>
