--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Link to the CSS file -->
   </head>
   <body>
-    <img id="image" src="" alt="images" style="max-width: 100%; height: auto" />
+    <img id="image" src="" alt="Image from Google Drive" style="max-width: 100%; height: auto" />
     <script src="script.js"></script>
   </body>
 </html>
