--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <img id="image" src="" alt="Image from Google Drive" style="max-width: 100%; height: auto" />
-    <script src="script.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
